# lorekit

./: .env.example  .gitignore  .gitmodules  AGENT1_SPEC.md  AGENT2_SPEC.md  AGENT3_SPEC.md  Ancient_Wisdom_Shorts_Blueprint.md  Philosophy_Wise_Shopify_Business_Plan.md  SPEC.md  VIDEO_PIPELINE_ARCHITECTURE.md  WEB_SPEC.md  banner.html  banner2.html  pyproject.toml
docs/: NODES.md  ROADMAP-universal-platform.md
lorekit/: cli.py  config.py  db.py  models.py  pipeline.py  server.py
lorekit/api/: __init__.py  audio.py  billing.py  character.py  characters_routes.py  documents.py  effects.py  environments.py  generate.py  jobs.py  projects.py  scenes.py  scripts.py  settings_routes.py  sources_routes.py  templates.py  universes.py  voices.py  waitlist.py  workflow.py
lorekit/assembly/: color_grade.py  export.py  overlay.py  stitch.py  transitions.py
lorekit/audio/: analyzer.py  library.py  mixer.py  tts.py
lorekit/auth/: __init__.py  user.py
lorekit/billing/: __init__.py  metering.py
lorekit/mcp/: __init__.py  auth.py  server.py  tools.py  workflow_tools.py
lorekit/publish/: metadata.py  youtube.py
philosophywise/: cli.py  config.py  db.py  models.py  pipeline.py  server.py
scripts/: generate_voice_samples.py
tests/: conftest.py  test_api_documents.py  test_api_scripts.py  test_audio_analyzer.py  test_characters.py  test_chunking.py  test_config.py  test_db_documents.py  test_db_scripts.py  test_db_voices.py  test_prompt_builder.py  test_story_generator.py  test_templates.py  test_transitions.py  test_tts.py
web/: drizzle-dev.config.ts  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
web/drizzle/: schema.ts
(+238 files in other folders)
