[project]
name = "lorekit"
version = "0.1.0"
description = "LoreKit — universe-based AI video creation studio"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "anthropic>=0.76.0",
    "openai>=1.50.0",
    "fal-client>=0.5.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "python-multipart>=0.0.22",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "skia-python>=120.0",
]

[project.scripts]
lk = "lorekit.cli:main"

[project.optional-dependencies]
cloud = ["stripe>=15.0.0"]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["lorekit*"]
